<resources>
    <string name="app_name">COUNT ON ME!</string>
    <string name="Palabra">Bienvenidos!</string>
    <string name="mensaje">Te guiamos</string>
    <string name="send">Enviar</string>
    <string name="Envia">Escribe tu mensaje...</string>
    <string name="TestInicio">Con base a este test se diagnosticara y te ayudaremos</string>
    <string name="TestInicio1">300 millones</string>
    <string name="TestInicio2">de personas en el mundo viven con problemas psicologicos</string>
    <string name="TestInicio3">Selecciona tus respuestas de forma sincera</string>
    <string name="notification_channel_name">Music Channel</string>
    <string name="notification_channel_description">Shows the currently playing music</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="ansiedad">
        En el cuestionario hay una lista de sintomas comunes de la ansiedad.
        Lea cada uno de los items atentamente, e indique cuanto le ha afectado en la
        ultima semana incluyendo hoy:
    </string>

    <string name="depresion">
        En el cuestionario hay una lista de sintomas comunes de la depresion.
        Lea cada uno de los items atentamente, e indique cuanto le ha afectado en la
        ultima semana incluyendo hoy:
    </string>

    <string name="nunca">0 Nunca</string>
    <string name="aveces">1 A veces</string>
    <string name="muchas">2 Muchas veces</string>
    <string name="siempre">3 Siempre</string>
    <string name="pregunta1">Me acepto como persona</string>
    <string name="pregunta2">Tengo confianza en mi mismo</string>
    <string name="pregunta3">Se afirmarme</string>
    <string name="pregunta4">La mayoria de personas me quiere</string>
    <string name="pregunta5">Me expreso facilmente en grupo</string>
    <string name="pregunta6">Merezco ser feliz</string>
    <string name="pregunta7">Creo que mi opinion es tan importante como la de las demas</string>
    <string name="pregunta8">"Es humano cometer un error"¿Te dices esta cuando te equivocas?</string>
    <string name="pregunta9">¿Te es facil escuchar una critica justificada que te hagan?</string>
    <string name="pregunta10">¿Eres capa de decirle a otro adulto que no aceptas su comportamiento?</string>
    <string name="pregunta11">Cuando una relacion se hace insoportable,¿Eres capa de dejarla?</string>
    <string name="pregunta12">¿Tienes capacidad de decir "no" cuando es necesario?</string>


    <string name="Dnunca">0 Nunca</string>
    <string name="Daveces">1 Varios dias</string>
    <string name="Dmuchas">2 Mas de la mitad de los dias</string>
    <string name="Dsiempre">3 Casi todos los dias</string>
    <string name="Dpregunta1">Poco interes o agrado al hacer las cosas</string>
    <string name="Dpregunta2">Se ha sentido triste,deprimido o desesperado</string>
    <string name="Dpregunta3">Ha tenido problemas para dormir, mantenerse despierto o duerme demasiado</string>
    <string name="Dpregunta4">Se siente cansado o con poca energia</string>
    <string name="Dpregunta5">Tiene poco o excesivo apetito</string>
    <string name="Dpregunta6">Se ha sentido al consigo mismo, ha sentido que usted es un fracaso o ha sentido que se ha
    fallado a si mismo o a su familia</string>
    <string name="Dpregunta7">Ha tenido problemas para concentrarse en actividades como leer o periodico o ver televesion</string>
    <string name="Dpregunta8">Se mueve o habla tan despacio que otras personas pueden darse cuenta. Esta tan inquieto
        o intranquilo que da vueltas de un lugar a otro mas que de costumbre</string>
    <string name="Dpregunta9">Ha pensado que estaria mejor muerto o ha deseado hacerse daño de alguna forma</string>
    <string name="Dpregunta10">¿Eres capa de decirle a otro adulto que no aceptas su comportamiento?</string>
    <string name="Dpregunta11">Cuando una relacion se hace insoportable,¿Eres capa de dejarla?</string>
    <string name="Dpregunta12">¿Tienes capacidad de decir "no" cuando es necesario?</string>



    <string name="Ayuda">Si necesitas hablar con alguien, presiona con toda confianza el boton  y se te contactara con un
    alguien de apoyo</string>

    <string-array name="sexo_list">
        <item>Seleccionar...</item>
        <item>Masculino</item>
        <item>Femenino</item>
        <item>No Binario</item>
        <item>Fluido</item>
        <item>Otro</item>
    </string-array>

    <string-array name="contactos_list">
        <item>Dr. Elizabeth Torres</item>
        <item>Dr. Alejandro Mondragon</item>
        <item>Dr. Marco Perez</item>
        <item>Dr. Daniel Ruiz</item>
    </string-array>






    <string name="header">2048</string>
    <string name="high_score">MAX</string>
    <string name="score">PUNTAJE</string>
    <string name="you_win">Tu ganaste!</string>
    <string name="game_over">Perdiste!</string>
    <string name="go_on">Tap para continuar</string>
    <string name="for_now">For now…</string>
    <string name="endless">Modo "Endless"</string>

    <!-- Confirmation dialog-->
    <string name="reset">Resetear</string>
    <string name="continue_game">Cancelar</string>
    <string name="reset_dialog_title">Resetear Juego</string>
    <string name="reset_dialog_message">Estas seguro de inicializar el juego?</string>

    <!-- Share Intro -->
    <string name="get_from_bazaar">Get 2048 on Cafe Bazaar</string>
    <string name="share_title">Share 2048 using</string>

    <!-- Trash -->
    <string name="reward_amount_error">Each set only has two extra chance!</string>
    <string name="tiles_are_not_enough_to_remove">Los cuadros son muy pocos para remover!</string>
    <string name="trash_dialog_title">Remove tiles</string>
    <string name="trash_dialog_message">Estas seguro de remover los cuadros?</string>
    <string name="yes_delete_tiles">Si</string>
    <string name="dont_delete_tiles">No</string>

    <!-- Deleting Selection -->
    <string name="action_deleting_selection">Deleting Selection</string>
    <string name="title_deleting_selection">Select your required tile</string>
    <string name="message_unable_deleting_selection">no more chance for this set!</string>
    <string name="message_inactivated_game_and_deleting_selection_is_available">Press \"Undo\", then do this action again!</string>
    <string name="title_remain_deleting_selections_amount">Remaining selections: </string>
    <string name="question_deleting_selections">Are you sure?</string>

    <!-- Menu Items -->
    <string name="achievements">Achievements</string>
    <string name="leaderboards">Leaderboards</string>
    <string name="settings">Settings</string>
    <string name="contact_us">Contact us</string>
    <string name="instagram">Instagram</string>
    <string name="other_games">Other games</string>
    <string name="background_color">Background color</string>
    <string name="rate_us">Rate 2048</string>
    <string name="share_2048">Share with friends</string>
    <string name="sign_out">Sign out</string>
    <string name="try_again">Try again a few seconds later!</string>

    <!-- Color -->
    <string name="color_picker">Color picker</string>
    <string name="red">Red:</string>
    <string name="green">Green:</string>
    <string name="blue">Blue:</string>

    <!-- Coloring -->
    <string name="background_color_changed">Background color has been changed</string>
    <string name="background_color_has_been_reset_to_default">Background color has been reset to default</string>
    <string name="accept_color">Accept</string>
    <string name="dont_accept_color">Cancel</string>
    <string name="reset_to_default_color">Default</string>

    <!-- Contact with Email -->
    <string name="email_client_error">There is no email client installed!</string>
    <string name="email_subject">2048 support</string>
    <string name="email_support_address" translatable="false">gameditors.corp@gmail.com</string>
    <string name="email_send_title">Send Email...</string>

    <string name="saved">Toda la informacion guardada</string>
    <string name="loaded">Cargado correctamente!</string>
    <string name="loading_failed">You haven\'t any saved game!</string>
    <string name="message_unable_saving_on_game_over">when the game is over, you can\'t make backup!</string>

    <!-- new features -->
    <string name="new_features_title">What\'s new?</string>
    <string name="new_features_positive_btn">OK</string>
    <string name="message_new_features">Snapshot saving/loading has been added to the game</string>
</resources>