<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".fragments.fragments.Ansiedad"
    android:background="#FFFAAE">

    <!-- TODO: Update blank fragment layout -->
    <TextView
        android:id="@+id/txtBarAn"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:background="@drawable/layout_bg_bar"
        android:backgroundTint="@color/blue_pastel"
        />

    <ScrollView
        android:layout_marginLeft="20dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="80dp"
        android:layout_marginRight="20dp"
        android:layout_marginBottom="20dp"
        android:background="@drawable/layout_menu_bg"
        android:scrollbarStyle="outsideInset"
        >

        <LinearLayout

            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:paddingLeft="30dp"
            android:paddingRight="30dp"
            android:gravity="center"
            >

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/depresion"
                android:textColor="@color/black"
                android:layout_marginTop="20dp"
                android:textSize="18dp"
                android:justificationMode="inter_word"
                />

            <TextView
                android:layout_marginTop="20dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/nunca"
                android:textColor="@color/darkBackground"/>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/aveces"
                android:textColor="@color/darkBackground"/>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/muchas"
                android:textColor="@color/darkBackground"/>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/siempre"
                android:textColor="@color/darkBackground"/>


            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/Dpregunta1"
                android:layout_marginTop="20dp"
                android:textSize="16dp"
                />
            <EditText
                android:id="@+id/edtPreguntaD1"
                android:layout_marginTop="10dp"
                android:layout_marginBottom="10dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:inputType="number"
                />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/Dpregunta2"
                android:textSize="16dp"
                />
            <EditText
                android:id="@+id/edtPreguntaD2"
                android:layout_marginTop="10dp"
                android:layout_marginBottom="10dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:inputType="number"
                />
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/Dpregunta3"
                android:textSize="16dp"
                />
            <EditText
                android:id="@+id/edtPreguntaD3"
                android:layout_marginTop="10dp"
                android:layout_marginBottom="10dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:inputType="number"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/Dpregunta4"
                android:textSize="16dp"
                />
            <EditText
                android:id="@+id/edtPreguntaD4"
                android:layout_marginTop="10dp"
                android:layout_marginBottom="10dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:inputType="number"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/Dpregunta5"
                android:textSize="16dp"
                />
            <EditText
                android:id="@+id/edtPreguntaD5"
                android:layout_marginTop="10dp"
                android:layout_marginBottom="10dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:inputType="number"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/Dpregunta6"
                android:textSize="16dp"
                />
            <EditText
                android:id="@+id/edtPreguntaD6"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:inputType="number"
                android:layout_marginTop="10dp"
                android:layout_marginBottom="10dp"
                />

            <TextView
                android:textSize="16dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/Dpregunta7"
                />
            <EditText
                android:id="@+id/edtPreguntaD7"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:inputType="number"
                android:layout_marginTop="10dp"
                android:layout_marginBottom="10dp"/>

            <TextView
                android:textSize="16dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/Dpregunta8"
                />
            <EditText
                android:id="@+id/edtPreguntaD8"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:inputType="number"
                android:layout_marginTop="10dp"
                android:layout_marginBottom="10dp"
                />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/Dpregunta9"
                android:textSize="16dp"
                />

            <EditText
                android:id="@+id/edtPreguntaD9"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:inputType="number"
                android:layout_marginTop="10dp"
                android:layout_marginBottom="10dp"
                />
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text=""
                android:textSize="16dp"
                />
            <EditText
                android:id="@+id/edtPreguntaD10"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:inputType="number"
                android:layout_marginTop="10dp"
                android:layout_marginBottom="10dp"
                />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text=""
                android:textSize="16dp"
                />
            <EditText
                android:id="@+id/edtPreguntaD11"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:inputType="number"
                android:layout_marginTop="10dp"
                android:layout_marginBottom="10dp"
                />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text=""
                android:textSize="16dp"
                />
            <EditText
                android:id="@+id/edtPreguntaD12"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:inputType="number"
                android:layout_marginTop="10dp"
                android:layout_marginBottom="10dp"/>

            <Button
                android:id="@+id/btnDepresion"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="30dp"
                android:layout_marginBottom="40dp"
                android:text="Terminar"/>

        </LinearLayout>
    </ScrollView>
</FrameLayout>